--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,8 +15,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6"
   }
